--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>秋天的红颜</title>
 	</head>
 	<body>
+		<img src="QQ图片20201224151554.png" />
 		<h1>秋天的红颜</h1>
 		<p>可爱的人，他的期限是水</p>
 		<p>在下游徐徐打开了我的一生</p>
